修复找不到下载图片的bug
另修改了样式，添加了查看文件夹的功能

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "pages/album/album"
   ],
   "window": {
-    "navigationBarTitleText": "Naomi 图床",
+    "navigationBarTitleText": "Naomi 相册",
     "navigationBarTextStyle": "white",
     "navigationBarBackgroundColor": "#373b3e"
   },
