--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.10.1",
-	"appid": "wxc20315852e05233c",
+	"appid": "wxfbc5db33bd702838",
 	"projectname": "naomi-album",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
