添加自定义导航栏，引用dialog组件，修改布局
TODO：添加一个按钮可以跳转最上方

--- a/app.json
+++ b/app.json
@@ -1,13 +1,16 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/preview/preview",
-    "pages/album/album"
+    "pages/album/album",
+    "pages/preview/preview"
   ],
   "window": {
-    "navigationBarTitleText": "Naomi 相册",
-    "navigationBarTextStyle": "white",
-    "navigationBarBackgroundColor": "#373b3e"
+    "navigationBarBackgroundColor": "#9dbdc6",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "Naomi 相册"
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "useExtendedLib": {
+    "weui": true
+  }
 }
