--- a/project.config.json
+++ b/project.config.json
@@ -3,7 +3,7 @@
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
-		"enhance": true,
+		"enhance": false,
 		"postcss": true,
 		"preloadBackgroundData": false,
 		"minified": true,
@@ -29,7 +29,7 @@
 		"packNpmRelationList": []
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.11.3",
+	"libVersion": "2.12.0",
 	"appid": "wxfbc5db33bd702838",
 	"projectname": "naomi-album",
 	"isGameTourist": false,
