canvas 2D album页面使用完成
我是傻逼我是傻逼我是傻逼
canvas-id是旧接口的属性，忘记改了，
另修改preview界面布局，
统一了代码风格

TODO:index页面布局优化

--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "cloud": true,
   "pages": [
     "pages/index/index",
-    "pages/album/album",
-    "pages/preview/preview"
+    "pages/preview/preview",
+    "pages/album/album"
   ],
   "window": {
     "navigationBarBackgroundColor": "#9dbdc6",
