完善云相册
todo 压缩上传页面

--- a/app.json
+++ b/app.json
@@ -3,8 +3,7 @@
   "pages": [
     "pages/index/index",
     "pages/preview/preview",
-    "pages/album/album",
-    "pages/album2/album"
+    "pages/album/album"
   ],
   "window": {
     "navigationBarBackgroundColor": "#9dbdc6",
