完善上传功能
修复异步执行问题,使用map和Promise.all替代forEach

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -13,8 +13,14 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/album/album",
+          "name": "album",
           "pathName": "pages/album/album",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "uploader",
+          "pathName": "pages/album/uploader/uploader",
           "query": "",
           "scene": null
         }
