--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
   "pages": [
     "pages/index/index",
     "pages/preview/preview",
-    "pages/album/album"
+    "pages/album/album",
+    "pages/album/uploader/uploader"
   ],
   "window": {
     "navigationBarBackgroundColor": "#9dbdc6",
