--- a/project.config.json
+++ b/project.config.json
@@ -33,10 +33,13 @@
     "packNpmManually": false,
     "packNpmRelationList": [],
     "minifyWXSS": true,
-    "showES6CompileOption": false
+    "disableUseStrict": false,
+    "minifyWXML": true,
+    "showES6CompileOption": false,
+    "useCompilerPlugins": false
   },
   "compileType": "miniprogram",
-  "libVersion": "2.20.0",
+  "libVersion": "2.20.2",
   "appid": "wxfbc5db33bd702838",
   "projectname": "naomi-album",
   "isGameTourist": false,
