--- a/app.json
+++ b/app.json
@@ -11,5 +11,6 @@
     "navigationBarTextStyle": "black",
     "navigationBarTitleText": "Naomi 相册"
   },
+  "lazyCodeLoading": "requiredComponents",
   "sitemapLocation": "sitemap.json"
 }
