--- a/functions/imgcheck/config.json
+++ b/functions/imgcheck/config.json
@@ -1,7 +1,5 @@
 {
   "permissions": {
-      "openapi": [
-          "security.imgSecCheck"
-      ]
+    "openapi": ["security.imgSecCheck"]
   }
 }
