--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "eslint": "eslint ./ --ext .js --ext .wxml",
-    "eslint:fix": "eslint --fix ./ --ext .js --ext .wxml"
+    "eslint:fix": "eslint --fix ./ --ext .js --ext .wxml",
+    "prettier": "prettier --write './**/*.{js,wxml,wxss,json}'"
   },
   "repository": {
     "type": "git",
