--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@babel/eslint-parser": "^7.16.5",
-    "eslint": "^8.7.0",
+    "eslint": "^8.8.0",
+    "eslint-config-alloy": "^4.4.0",
     "eslint-plugin-wxml": "^0.6.1",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
