--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
     "autoAudits": false,
     "showShadowRootInWxmlPanel": true,
     "scopeDataCheck": false,
-    "uglifyFileName": false,
+    "uglifyFileName": true,
     "checkInvalidKey": true,
     "checkSiteMap": true,
     "uploadWithSourceMap": true,
@@ -39,7 +39,7 @@
     "ignoreUploadUnusedFiles": true
   },
   "compileType": "miniprogram",
-  "libVersion": "2.21.3",
+  "libVersion": "2.22.0",
   "appid": "wxfbc5db33bd702838",
   "projectname": "naomi-album",
   "isGameTourist": false,
