--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "lint-staged": {
     "*.{js,wxml}": [
       "eslint . --fix --ext .js,.wxml",
-      "prettier -w './**/*.{js,wxml}'",
+      "prettier -w",
       "git add"
     ],
     "*.{wxss,json}": [
-      "prettier -w './**/*.{wxss,json}'",
+      "prettier -w",
       "git add"
     ]
   },
@@ -32,6 +32,8 @@
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@babel/eslint-parser": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-alloy": "^4.4.0",
     "eslint-plugin-wxml": "^0.6.3",
